# Carambolas

./: .gitattributes  .gitignore  .gitmodules  A9.sln  LICENSE  LICENSE-CommandLine  LICENSE-Crc32.Net  LICENSE-LibGit2Sharp  LICENSE-Replxx  LICENSE-Unity  README.md  Version.props  build.bat  build.cmd  build.sh  mklinks.cmd  nugetpack.bat  nugetpack.cmd  nugetpack.sh
Carambolas.Core/: Assembly.cs  Carambolas.Core.csproj  CommandLineArguments.cs  Converters.cs  Enum.cs  HashCode.cs  HexConverter.cs  Luid.cs  MathEx.cs  MovingAverage.cs  MovingMeans.cs  Pool.cs  Resources.cs  Singleton.cs  Strings.cs
Carambolas.Core.Tests/: Carambolas.Core.Tests.csproj  GuidConverterTests.cs  MovingMeansTests.cs  RangeTests.cs
Carambolas.Net.Native/: CMakeLists.txt  Carambolas.Net.Native.vcxproj  Carambolas.Net.Native.vcxproj.filters  build-linux.sh  build-osx.sh  build-win.bat
Carambolas.Net.Native/nuget/: Carambolas.Net.Native.Linux.csproj  Carambolas.Net.Native.Win.csproj  Carambolas.Net.Native.macOS.csproj
Carambolas.Net.Native/src/: CMakeLists.txt  native.c
Carambolas.Net.Tests/: BinaryReader.Tests.cs  BinaryWriter.Tests.cs  MemoryPoolTests.cs  (+4 more)
Carambolas.Net.Tests.Application/: Carambolas.Net.Tests.Application.csproj  Host.bat  Program.cs
Carambolas.Net.Tests.Host/: Carambolas.Net.Tests.Host.csproj  Client-Many.bat  Client.bat  Program.cs
Carambolas.Net.Tests.Integration/: Carambolas.Net.Tests.Integration.csproj  Loopback.Tests.cs  LoopbackTests.cs  PriorityAttribute.cs  PriorityOrderer.cs
Native/cnsock/src/: CMakeLists.txt  cnsock.c  cnsock.h  resource.rc  version.h
(+311 files in other folders)
